--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,14 +2,15 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 motor==3.3.2
 beanie==1.23.6
-pydantic==2.5.0
-pydantic[email]==2.5.0
+pydantic==2.8.2
+pydantic[email]==2.8.2
+pydantic-settings==2.1.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 python-dotenv==1.0.0
 sendgrid==6.11.0
-pillow==10.1.0
+pillow==11.2.1
 slowapi==0.1.9
 python-slugify==8.0.1
 aiofiles==23.2.1
@@ -18,5 +19,5 @@ pytest==7.4.3
 pytest-asyncio==0.21.1
 pymongo==4.6.0
 redis==5.0.1
-email-validator==2.1.0
+email-validator==2.2.0
 jinja2==3.1.2 
